Backport TRUNK-6572 and TRUNK-6576 to 2.8.x
- TRUNK-6572: Add @Transactional(propagation = Propagation.NOT_SUPPORTED) to OrderServiceImpl#getNewOrderNumber
- TRUNK-6576: Add dose > 0 validation to DrugOrderValidator, add error message in messages.properties, and add tests in DrugOrderValidatorTest

Co-authored-by: dkayiwa <1390773+dkayiwa@users.noreply.github.com>